extra code added

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
             </div>
         </section>
 
+
+        <!-- blog sectin html code -->
         <section class="blog-section">
             <div class="nav-area">
                 <div class="nav-options">
@@ -46,7 +48,7 @@
             <div class="blog-area">
 
 
-                <div class="blog-posts">
+                <article class="blog-posts">
                     <div class="blog-banner">
                         <img src="assets/Blog Image.png" alt="">
                     </div>
@@ -60,10 +62,10 @@
                         <p><i class="fa-light fa-clock"></i> 10h</p>
                         <p><i class="fa-light fa-comment-dots"></i> 23</p>
                     </div>
-                </div>
+                </article>
 
 
-                <div class="blog-posts">
+                <article class="blog-posts">
                     <div class="blog-banner">
                         <img src="assets/Blog Image.png" alt="">
                     </div>
@@ -77,10 +79,10 @@
                         <p><i class="fa-light fa-clock"></i> 10h</p>
                         <p><i class="fa-light fa-comment-dots"></i> 23</p>
                     </div>
-                </div>
+                </article>
 
 
-                <div class="blog-posts">
+                <article class="blog-posts">
                     <div class="blog-banner">
                         <img src="assets/Blog Image.png" alt="">
                     </div>
@@ -94,11 +96,11 @@
                         <p><i class="fa-light fa-clock"></i> 10h</p>
                         <p><i class="fa-light fa-comment-dots"></i> 23</p>
                     </div>
-                </div>
+                </article>
 
 
 
-                <div class="blog-posts">
+                <article class="blog-posts">
                     <div class="blog-banner">
                         <img src="assets/Blog Image.png" alt="">
                     </div>
@@ -112,11 +114,11 @@
                         <p><i class="fa-light fa-clock"></i> 10h</p>
                         <p><i class="fa-light fa-comment-dots"></i> 23</p>
                     </div>
-                </div>
+                </article>
 
 
 
-                <div class="blog-posts">
+                <article class="blog-posts">
                     <div class="blog-banner">
                         <img src="assets/Blog Image.png" alt="">
                     </div>
@@ -130,11 +132,11 @@
                         <p><i class="fa-light fa-clock"></i> 10h</p>
                         <p><i class="fa-light fa-comment-dots"></i> 23</p>
                     </div>
-                </div>
+                </article>
 
 
 
-                <div class="blog-posts">
+                <article class="blog-posts">
                     <div class="blog-banner">
                         <img src="assets/Blog Image.png" alt="">
                     </div>
@@ -148,11 +150,11 @@
                         <p><i class="fa-light fa-clock"></i> 10h</p>
                         <p><i class="fa-light fa-comment-dots"></i> 23</p>
                     </div>
-                </div>
+                </article>
 
 
 
-                <div id="hiden-post" class="blog-posts">
+                <article id="hiden-post" class="blog-posts">
                     <div class="blog-banner">
                         <img src="assets/Blog Image.png" alt="">
                     </div>
@@ -166,11 +168,11 @@
                         <p><i class="fa-light fa-clock"></i> 10h</p>
                         <p><i class="fa-light fa-comment-dots"></i> 23</p>
                     </div>
-                </div>
+                </article>
 
 
 
-                <div id="hiden-post" class="blog-posts">
+                <article id="hiden-post" class="blog-posts">
                     <div class="blog-banner">
                         <img src="assets/Blog Image.png" alt="">
                     </div>
@@ -184,11 +186,11 @@
                         <p><i class="fa-light fa-clock"></i> 10h</p>
                         <p><i class="fa-light fa-comment-dots"></i> 23</p>
                     </div>
-                </div>
+                </article>
 
 
 
-                <div id="hiden-post" class="blog-posts">
+                <article id="hiden-post" class="blog-posts">
                     <div class="blog-banner">
                         <img src="assets/Blog Image.png" alt="">
                     </div>
@@ -202,16 +204,19 @@
                         <p><i class="fa-light fa-clock"></i> 10h</p>
                         <p><i class="fa-light fa-comment-dots"></i> 23</p>
                     </div>
-                </div>
-
+                </article>
 
             </div>
-
+            <!-- this code is only use for tab/medium screen device -->
             <div class="view-all-post">
                 <a href="">View All</a>
             </div>
+            <!-- this code is only use for tab/medium screen device -->
+
+
         </section>
 
+        <!-- footer html code -->
         <section class="footer-section">
             <div class="goal">
                 <h1>Goal</h1>
@@ -229,6 +234,9 @@
                     <small>Goal Live</small>
                 </div>
 
+
+
+                <!-- this nav section is only for tab or medium screen device view -->
                 <div class="footer-nav-for-tab">
                     <div class="footer-nav-1">
                         <small>About Us</small>
@@ -241,6 +249,9 @@
                         <small>Goal Live</small>
                     </div>
                 </div>
+                <!-- this nav section is only for tab or medium screen device view -->
+
+
             </div>
         </section>
 
