--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <script src="https://kit.fontawesome.com/9e1059fa18.js" crossorigin="anonymous"></script>
     <!-- css link -->
     <link rel="stylesheet" href="styles/style.css">
+    <style>
+        #blogs {
+            background-color: #DD0000;
+        }
+    </style>
 </head>
 
 <body>
@@ -40,9 +45,9 @@
         <section class="blog-section">
             <div class="nav-area">
                 <div class="nav-options">
-                    <a href="" class="upcoming-match">Upcoming Match</a>
+                    <a href="upcomming-match.html" class="upcoming-match">Upcoming Match</a>
                     <a href="" class="groups" id="all-groups">All Groups</a>
-                    <a href="http://127.0.0.1:5500/index.html" id="blogs">Blog</a>
+                    <a href="index.html" id="blogs">Blog</a>
                 </div>
             </div>
             <div class="blog-area">
@@ -59,8 +64,10 @@
                         <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
                     </div>
                     <div class="blog-details">
-                        <p><i class="fa-light fa-clock"></i> 10h</p>
-                        <p><i class="fa-light fa-comment-dots"></i> 23</p>
+                        <p><img src="assets/Time Icon.png" alt=""></p>
+                        <p>10hr</p>
+                        <p><img src="assets/Chat Icon.png" alt=""></p>
+                        <p>23</p>
                     </div>
                 </article>
 
@@ -76,8 +83,10 @@
                         <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
                     </div>
                     <div class="blog-details">
-                        <p><i class="fa-light fa-clock"></i> 10h</p>
-                        <p><i class="fa-light fa-comment-dots"></i> 23</p>
+                        <p><img src="assets/Time Icon.png" alt=""></p>
+                        <p>10hr</p>
+                        <p><img src="assets/Chat Icon.png" alt=""></p>
+                        <p>23</p>
                     </div>
                 </article>
 
@@ -93,26 +102,10 @@
                         <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
                     </div>
                     <div class="blog-details">
-                        <p><i class="fa-light fa-clock"></i> 10h</p>
-                        <p><i class="fa-light fa-comment-dots"></i> 23</p>
-                    </div>
-                </article>
-
-
-
-                <article class="blog-posts">
-                    <div class="blog-banner">
-                        <img src="assets/Blog Image.png" alt="">
-                    </div>
-                    <div class="transfer-button">
-                        <a href="">Transfer</a>
-                    </div>
-                    <div class="blog-info">
-                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-                    </div>
-                    <div class="blog-details">
-                        <p><i class="fa-light fa-clock"></i> 10h</p>
-                        <p><i class="fa-light fa-comment-dots"></i> 23</p>
+                        <p><img src="assets/Time Icon.png" alt=""></p>
+                        <p>10hr</p>
+                        <p><img src="assets/Chat Icon.png" alt=""></p>
+                        <p>23</p>
                     </div>
                 </article>
 
@@ -129,8 +122,10 @@
                         <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
                     </div>
                     <div class="blog-details">
-                        <p><i class="fa-light fa-clock"></i> 10h</p>
-                        <p><i class="fa-light fa-comment-dots"></i> 23</p>
+                        <p><img src="assets/Time Icon.png" alt=""></p>
+                        <p>10hr</p>
+                        <p><img src="assets/Chat Icon.png" alt=""></p>
+                        <p>23</p>
                     </div>
                 </article>
 
@@ -147,8 +142,30 @@
                         <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
                     </div>
                     <div class="blog-details">
-                        <p><i class="fa-light fa-clock"></i> 10h</p>
-                        <p><i class="fa-light fa-comment-dots"></i> 23</p>
+                        <p><img src="assets/Time Icon.png" alt=""></p>
+                        <p>10hr</p>
+                        <p><img src="assets/Chat Icon.png" alt=""></p>
+                        <p>23</p>
+                    </div>
+                </article>
+
+
+
+                <article class="blog-posts">
+                    <div class="blog-banner">
+                        <img src="assets/Blog Image.png" alt="">
+                    </div>
+                    <div class="transfer-button">
+                        <a href="">Transfer</a>
+                    </div>
+                    <div class="blog-info">
+                        <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                    </div>
+                    <div class="blog-details">
+                        <p><img src="assets/Time Icon.png" alt=""></p>
+                        <p>10hr</p>
+                        <p><img src="assets/Chat Icon.png" alt=""></p>
+                        <p>23</p>
                     </div>
                 </article>
 
@@ -165,8 +182,10 @@
                         <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
                     </div>
                     <div class="blog-details">
-                        <p><i class="fa-light fa-clock"></i> 10h</p>
-                        <p><i class="fa-light fa-comment-dots"></i> 23</p>
+                        <p><img src="assets/Time Icon.png" alt=""></p>
+                        <p>10hr</p>
+                        <p><img src="assets/Chat Icon.png" alt=""></p>
+                        <p>23</p>
                     </div>
                 </article>
 
@@ -183,8 +202,10 @@
                         <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
                     </div>
                     <div class="blog-details">
-                        <p><i class="fa-light fa-clock"></i> 10h</p>
-                        <p><i class="fa-light fa-comment-dots"></i> 23</p>
+                        <p><img src="assets/Time Icon.png" alt=""></p>
+                        <p>10hr</p>
+                        <p><img src="assets/Chat Icon.png" alt=""></p>
+                        <p>23</p>
                     </div>
                 </article>
 
@@ -201,8 +222,10 @@
                         <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
                     </div>
                     <div class="blog-details">
-                        <p><i class="fa-light fa-clock"></i> 10h</p>
-                        <p><i class="fa-light fa-comment-dots"></i> 23</p>
+                        <p><img src="assets/Time Icon.png" alt=""></p>
+                        <p>10hr</p>
+                        <p><img src="assets/Chat Icon.png" alt=""></p>
+                        <p>23</p>
                     </div>
                 </article>
 
